==> xiaoxiang781216/incubator-nuttx/arch/arm/src/rp2040/rp2040_spi.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdbool.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <string.h>
#include <arch/board/board.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/mutex.h>
#include <nuttx/spi/spi.h>
#include "arm_internal.h"
#include "chip.h"
#include "rp2040_spi.h"
#include "hardware/rp2040_spi.h"
#include "rp2040_dmac.h"
#define RP2040_SPI_FIFOSZ        8

static uint32_t spi_setfrequency(struct spi_dev_s *dev,
                                 uint32_t frequency)
{
  struct rp2040_spidev_s *priv = (struct rp2040_spidev_s *)dev;
  uint32_t divisor;
  uint32_t actual;

  /* Set SPI_CLOCK */

  /* frequency = SPI_CLOCK / divisor, or divisor = SPI_CLOCK / frequency */

  priv->spibasefreq = BOARD_PERI_FREQ;
  divisor = priv->spibasefreq / frequency;

  /* "In master mode, CPSDVSRmin = 2 or larger (even numbers only)" */

  if (divisor < 2)
    {
      divisor = 2;
    }
  else if (divisor > 254)
    {
      divisor = 254;
    }

  divisor = (divisor + 1) & ~1;

  /* Save the new divisor value */

  spi_putreg(priv, RP2040_SPI_SSPCPSR_OFFSET, divisor);

  /* Calculate the new actual */

  actual = priv->spibasefreq / divisor;

  /* Save the frequency setting */

  priv->frequency = frequency;
  priv->actual    = actual;

  spiinfo("Frequency %" PRId32 "->%" PRId32 "\n", frequency, actual);
  return actual;
}

static void spi_setmode(struct spi_dev_s *dev, enum spi_mode_e mode)
{
  struct rp2040_spidev_s *priv = (struct rp2040_spidev_s *)dev;
  uint32_t regval;

  /* Has the mode changed? */

  if (mode != priv->mode)
    {
      /* Yes... Set CR0 appropriately */

      regval = spi_getreg(priv, RP2040_SPI_SSPCR0_OFFSET);
      regval &= ~(RP2040_SPI_SSPCR0_SPO | RP2040_SPI_SSPCR0_SPH);

      switch (mode)
        {
          case SPIDEV_MODE0: /* CPOL=0; CPHA=0 */
            break;

          case SPIDEV_MODE1: /* CPOL=0; CPHA=1 */
            regval |= RP2040_SPI_SSPCR0_SPH;
            break;

          case SPIDEV_MODE2: /* CPOL=1; CPHA=0 */
            regval |= RP2040_SPI_SSPCR0_SPO;
            break;

          case SPIDEV_MODE3: /* CPOL=1; CPHA=1 */
            regval |= (RP2040_SPI_SSPCR0_SPO | RP2040_SPI_SSPCR0_SPH);
            break;

          default:
            spierr("Bad mode: %d\n", mode);
            DEBUGASSERT(FALSE);

            return;
        }

      spi_putreg(priv, RP2040_SPI_SSPCR0_OFFSET, regval);

      /* Save the mode so that subsequent re-configurations will be faster */

      priv->mode = mode;
    }
}

static void spi_setbits(struct spi_dev_s *dev, int nbits)
{
  struct rp2040_spidev_s *priv = (struct rp2040_spidev_s *)dev;
  uint32_t regval;

  /* Has the number of bits changed? */

  DEBUGASSERT(priv && nbits > 3 && nbits < 17);

  if (nbits != priv->nbits)
    {
      /* Yes... Set CR0 appropriately */

      regval = spi_getreg(priv, RP2040_SPI_SSPCR0_OFFSET);
      regval &= ~RP2040_SPI_SSPCR0_DSS_MASK;
      regval |= ((nbits - 1) << RP2040_SPI_SSPCR0_DSS_SHIFT);
      spi_putreg(priv, RP2040_SPI_SSPCR0_OFFSET, regval);

      /* Save the selection so that re-configurations will be faster
       */

      priv->nbits = nbits;
#ifdef CONFIG_RP2040_SPI_DMA
      if (priv->nbits > 8)
        {
          priv->txconfig.size = RP2040_DMA_SIZE_HALFWORD;
          priv->rxconfig.size = RP2040_DMA_SIZE_HALFWORD;
        }
      else
        {
          priv->txconfig.size = RP2040_DMA_SIZE_BYTE;
          priv->rxconfig.size = RP2040_DMA_SIZE_BYTE;
        }
#endif
    }
}

static uint32_t spi_send(struct spi_dev_s *dev, uint32_t wd)
{
  struct rp2040_spidev_s *priv = (struct rp2040_spidev_s *)dev;
  register uint32_t regval;

  /* Wait while the TX FIFO is full */

  while (!(spi_getreg(priv, RP2040_SPI_SSPSR_OFFSET) & RP2040_SPI_SSPSR_TNF))
    ;

  /* Write the byte to the TX FIFO */

  spi_putreg(priv, RP2040_SPI_SSPDR_OFFSET, wd);

  /* Wait for the RX FIFO not empty */

  while (!(spi_getreg(priv, RP2040_SPI_SSPSR_OFFSET) & RP2040_SPI_SSPSR_RNE))
    ;

  /* Get the value from the RX FIFO and return it */

  regval = spi_getreg(priv, RP2040_SPI_SSPDR_OFFSET);
  spiinfo("%04" PRIx32 "->%04" PRIx32 "\n", wd, regval);

  return regval;
}

struct spi_dev_s *rp2040_spibus_initialize(int port)
{
  struct rp2040_spidev_s *priv;
  uint32_t regval;
  int i;
#ifdef CONFIG_RP2040_SPI_DMA
  dma_config_t txconf;
  dma_config_t rxconf;
#endif

  switch (port)
    {
#ifdef CONFIG_RP2040_SPI0
      case 0:
        priv = &g_spi0dev;
#ifdef CONFIG_RP2040_SPI_DMA
        txconf.dreq = RP2040_DMA_DREQ_SPI0_TX;
        rxconf.dreq = RP2040_DMA_DREQ_SPI0_RX;
#endif
        break;
#endif

#ifdef CONFIG_RP2040_SPI1
      case 1:
        priv = &g_spi1dev;
#ifdef CONFIG_RP2040_SPI_DMA
        txconf.dreq = RP2040_DMA_DREQ_SPI1_TX;
        rxconf.dreq = RP2040_DMA_DREQ_SPI1_RX;
#endif
        break;
#endif

      default:
        return NULL;
    }

  /* If already initialized */

  if (priv->initialized)
    {
      return &priv->spidev;
    }

  /* Configure clocking */

  priv->spibasefreq = BOARD_PERI_FREQ;

  /* DMA settings */

#ifdef CONFIG_RP2040_SPI_DMA
  nxsem_init(&priv->dmasem, 0, 0);
  nxsem_set_protocol(&priv->dmasem, SEM_PRIO_NONE);

  priv->txdmach = rp2040_dmachannel();
  txconf.size = RP2040_DMA_SIZE_BYTE;
  txconf.noincr = false;
  priv->txconfig = txconf;

  priv->rxdmach = rp2040_dmachannel();
  rxconf.size = RP2040_DMA_SIZE_BYTE;
  rxconf.noincr = false;
  priv->rxconfig = rxconf;

  priv->dmaenable = true;
#endif

  /* Configure 8-bit SPI mode */

  spi_putreg(priv, RP2040_SPI_SSPCR0_OFFSET,
             ((8 - 1) << RP2040_SPI_SSPCR0_DSS_SHIFT) |
             (0 << RP2040_SPI_SSPCR0_FRF_SHIFT));

  /* Disable SPI and all interrupts (we'll poll for all data) */

  spi_putreg(priv, RP2040_SPI_SSPCR1_OFFSET, 0);
  spi_putreg(priv, RP2040_SPI_SSPIMSC_OFFSET, 0);

  /* Clear interrupts */

  spi_putreg(priv, RP2040_SPI_SSPICR_OFFSET, 0x3);

  /* Set the initial SPI configuration */

  priv->frequency = 0;
  priv->nbits     = 8;
  priv->mode      = SPIDEV_MODE0;

  /* Select a default frequency of approx. 400KHz */

  spi_setfrequency((struct spi_dev_s *)priv, 400000);

  /* Initialize the SPI mutex that enforces mutually exclusive access */

  nxmutex_init(&priv->excllock);

  regval = spi_getreg(priv, RP2040_SPI_SSPCR1_OFFSET);
  spi_putreg(priv, RP2040_SPI_SSPCR1_OFFSET, regval | RP2040_SPI_SSPCR1_SSE);

  for (i = 0; i < RP2040_SPI_FIFOSZ; i++)
    {
      spi_getreg(priv, RP2040_SPI_SSPDR_OFFSET);
    }

  /* Set a initialized flag */

  priv->initialized = 1;

  return &priv->spidev;
}
